manifestos/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ui-uikit-product
  labels:
    istio-injection: enabled
