manifestos/resources/template-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uikit-product-$CI_COMMIT_BRANCH_CUT
  namespace: ui-uikit-product
  labels:
    app: uikit-product
    version: $CI_COMMIT_BRANCH_CUT
    todo: delete
  annotations:
    janitor/ttl: 7d
spec:
  replicas: 1
  selector:
    matchLabels:
      version: $CI_COMMIT_BRANCH_CUT
  template:
    metadata:
      labels:
        app: uikit-product
        version: $CI_COMMIT_BRANCH_CUT
        todo: delete
      annotations:
        sidecar.istio.io/proxyCPU: "10m"
        sidecar.istio.io/proxyMemory: "64Mi"
        janitor/ttl: 7d
    spec:
      containers:
      - name: uikit-product-$CI_COMMIT_BRANCH_CUT
        image: new
        ports:
        - name: http
          containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "20m"
          requests:
            memory: "64Mi"
            cpu: "10m"
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 2
