manifestos/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uikit-product
  namespace: ui-uikit-product
  labels:
    app: uikit-product
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: uikit-product
