manifestos/resources/istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: uikit-product
  namespace: ui-uikit-product
spec:
  host: uikit-product
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: new
    labels:
      version: new
  - name: old
    labels:
      version: old
