manifestos/resources/istio-virtualservice-edge-main.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: uikit-product
  namespace: ui-uikit-product
spec:
  hosts:
  - "*"
  gateways:
  - cloud-platform/ui-gateway
  http:
  - match:
    - uri:
        prefix: "/product/"
      headers:
        test:
          exact: "true"
    route:
    - destination:
        host: uikit-product
        subset: new
        port:
          number: 8080
  - match:
    - uri:
        prefix: "/product/"
      withoutHeaders:
        ui-uikit-product: {}
    route:
    - destination:
        host: uikit-product
        subset: old
        port:
          number: 8080
