manifestos/resources/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: ui-uikit-product
spec:
  egress:
    - hosts:
        - ./*
