manifestos/resources/template-istio-destinationrule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: uikit-product-$CI_COMMIT_BRANCH_CUT
  namespace: ui-uikit-product
  labels:
    app: uikit-product
    todo: delete
  annotations:
    janitor/ttl: 7d
spec:
  host: uikit-product
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
  - name: $CI_COMMIT_BRANCH_CUT
    labels:
      version: $CI_COMMIT_BRANCH_CUT
